--- a/a_html/a_basic/d_element2.html
+++ b/a_html/a_basic/d_element2.html
@@ -36,5 +36,18 @@
   <span>span요소는 인라인 레벨 요소입니다.</span>
   <span style="color:red;">span요소는 인라인 레벨 요소입니다.</span>
   해당 문장은 요소 없이 작성됩니다.
+
+  <!-- 
+  ! 안녕
+  ? 만나서
+  * 반가워
+  # 자주색
+  % Hi
+  & 안녕하세요
+  
+  Todo (해야할 작업을 메모하는 경우)
+  // 사용하지 않는 주석 표시 (사용 권장 X)
+  -->
+  
 </body>
 </html>
