--- a/b_css/d_box/d_border.html
+++ b/b_css/d_box/d_border.html
@@ -79,5 +79,23 @@
   <div class="boxes" style="border-width: 10px 1px;">테두리</div>
   <div class="boxes" style="border-width: 10px 3px 5px;">테두리</div>
   <div class="boxes" style="border-width: 10px 10px 5px 3px;">테두리</div>
+
+  <hr>
+  <!-- border 축약 속성: 두께 종류 색상 -->
+  <div style="border: 5px dotted pink;">테두리 축약 속성</div>
+  <div style="border: 5px double orange;">테두리 축약 속성</div>
+  <div style="border: 5px dashed lightcoral;">테두리 축약 속성</div>
+
+  <!-- 
+    border-radius(반지름) 속성
+    : 둥근 테두리 속성
+    - 박스모델의 꼭짓점 부분에 원이 있다고 가정하여 둥그게 처리
+  -->
+  <img src="../강아지이미지.jpg" alt="강아지 이미지" style="width: 200px; border-radius: 8px;">
+
+  <img src="../강아지이미지.jpg" alt="강아지 이미지" style="width: 200px; border-radius: 16px;">
+
+  <!-- 프로필 이미지 (원모양)-->
+  <img src="../강아지이미지.jpg" alt="강아지 이미지" style="width: 200px; height: 200px; border-radius: 50%;">
 </body>
 </html>
