--- a/b_css/g_flex/flex03.html
+++ b/b_css/g_flex/flex03.html
@@ -43,6 +43,10 @@
       - order 값이 클수록 후위 배치
       - 순위값이 동등할 경우 소스 코드 순서
       - 음수값 지정 가능
+
+    ? 5. align-content
+      : 여러 줄(flex-wrap으로 줄바꿈 된 아이템들)을 교챠축 방향으로 어떻게 배치할지 결정하는 속성
+      - flex-wrap: wrap을 함께 써야 속성 효과가 나타남
 -->
 
   <!-- div>(button#one)*6 -->
@@ -53,6 +57,10 @@
     <button id="four">four</button>
     <button id="five">five</button>
     <button id="six">six</button>
+    <button id="seven">seven</button>
+    <button id="eight">eight</button>
+    <button id="nine">nine</button>
+    <button id="ten">ten</button>
   </div>
 
 </body>
