--- a/e_typescript/src/z_종합예제/d_work/index.html
+++ b/e_typescript/src/z_종합예제/d_work/index.html
@@ -3,11 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>할 일 관리 시스템 (TaskManager)</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  
+  <div id="app">
+    <h1>Task Logger(할 일 저장소)</h1>
+    <button id="log-task-button">Task 기록</button>
+
+    <!-- 동적 요소로 할 일 목록 나열 -->
+    <div id="task-list"></div>
+  </div>
+
   <script src="./main.js"></script>
 </body>
 </html>
