--- a/e_typescript/src/z_종합예제/d_work/index.html
+++ b/e_typescript/src/z_종합예제/d_work/index.html
@@ -15,6 +15,15 @@
     <div id="task-list"></div>
   </div>
 
+  <div id="task-modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Enter Task Description</h2>
+      <input type="text" id="task-input" placeholder="Task Description" />
+      <button id="add-task-button">Task 추가</button>
+    </div>
+  </div>
+
   <script src="./main.js"></script>
 </body>
 </html>
